At the same time, I let the particle (geantinos not muons to save time) simulate fully, and made CoBaLEP report in its steppingaction whether or not anything entered the target volume by outputting a '3'.
This way, every time ShowerGenerator.cc output a '1', it should be followed by a '3', and every '2' should NOT be followed by a 3.
Finally, I wrote a simple script to do the above automatically so I could simulate high statistics.

As it turned out, my trig cut was 5-10% wrong. Fixing it was a bitch and a half. I didn't give up until 20,000 particles in a row reported only 1's followed by 3's.

Once I was certain the trig cut was at least 99.99% accurate, I stopped simulating particles which failed the cut so I could count how many attempts it took to sample a successful particle. I ran 100,000 particles for high statistics, and it took about 10 hours on a single operating node. The result for this geometery (September2018WithCuts) and this sampling plane size (99m*99m square) was an efficiency of 1/11.99. Now that the scripts are all written, it should be a matter of manpower to do an identical study for any new geometries or efficiencies implemented.


06/17/2019

Exported all geometries in src/Detector_CJStyle.cc to GDML files. Now, instead of building the geometry in GEANT4 every time I run a simulation, I can just import the geometry file I want. This has the advantage of making version control safer and easier, as well as a slight boost to runtime, but most importantly it makes any geometries I create portable and therefore shareable.

To import a different geometry, just change the input filename in src/DetectorConstruction.cc like we used to change the RockOption string.
To create a new geometry file, just uncomment the GDML lines in the main() function of CoBaLEP.cc and change the output filename to whatever you want.