@@ -298,7 +298,7 @@ void IO::Open(char* inputseed)
   nuclearTree->Branch("tracknumber",&tracknumber,"tracknumber/I");
   nuclearTree->Branch("randomseed",&randomseed,"randomseed/I");
   nuclearTree->Branch("nuclearPID",&nuclearPID,"nuclearPID/I");
-  nuclearTree->Branch("creatorprocess",&creatorprocess);
+  //nuclearTree->Branch("creatorprocess",&creatorprocess);
 
   G4cout << "Output files opened." << G4endl;
 
@@ -349,7 +349,7 @@ void IO::Write(G4Track *track, int isadetector, int isentry)
   steplength = track->GetStep()->GetStepLength()/CLHEP::mm;
   tracknumber = track->GetTrackID();
   isentryevent = isentry;
-  if(PID!=13) //muons have no creator process and cause a seg fault
+  if(PID!=2112) //~muons have no creator process and cause a seg fault
     creatorprocess = track->GetCreatorProcess()->GetProcessName();
   else
     creatorprocess = "None";
@@ -415,7 +415,7 @@ void IO::WriteNuclear(G4Track *track)
     nuclearPID = 0;
 
   PID = track->GetDefinition()->GetPDGEncoding();  
-  creatorprocess = track->GetCreatorProcess()->GetProcessName();  
+  //creatorprocess = track->GetCreatorProcess()->GetProcessName();  
   material = track->GetLogicalVolumeAtVertex()->GetMaterial()->GetName();
   x = track->GetPosition().x();
   y = track->GetPosition().y();
@@ -591,6 +591,8 @@ void SteppingAction::UserSteppingAction(const G4Step* step)
   G4String material;
   if(PID!=13)
     material = step->GetPreStepPoint()->GetMaterial()->GetName();  
+  else
+    material = "Butts";
 //cuts go here
   currentsteps++;
 
@@ -610,7 +612,7 @@ void SteppingAction::UserSteppingAction(const G4Step* step)
 	    //G4cout << material << G4endl << PID << G4endl << info->GetOriginalParticle()->GetPDGEncoding() << G4endl << G4endl;
 	    //}//Material
 
-      if(strstr(whatgeometry.c_str(),detectornames.c_str())) //if pre step point originates in a detector
+      if(material=="GermaniumEnriched")//~strstr(whatgeometry.c_str(),detectornames.c_str())) //if pre step point originates in a detector
 	{
 	  fio->Write(step->GetTrack(), 1, 0); //non-entry event
 	 savedsteps++;
@@ -677,7 +679,7 @@ int main(int argc,char** argv)
   //Comment out when not actively building geometries
   //G4VPhysicalVolume* W = G4TransportationManager::GetTransportationManager()->GetNavigatorForTracking()->GetWorldVolume();
   //G4GDMLParser parser;
-  //parser.Write("geom/DefaultName.gdml", W, false);
+  //parser.Write("geom/Suspicious2018.gdml", W, false);
 
 #ifdef G4VIS_USE
   // Initialize visualization
